<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_fishing_details">Fishing Details</string>
    <string name="app_name">Fishing Diary</string>
    <string name="title_add_new_fishing">New Fishing</string>
    <string name="action_settings">Settings</string>
    <string name="action_camera">Camera</string>
    <string name="action_send">Send</string>
    <string name="action_back">Back</string>
    <string name="action_save">Save</string>
    <string name="title_fishing_place">Place:</string>
    <string name="title_fishing_weather">Weather</string>
    <string name="title_fishing_description">Description</string>
    <string name="title_fishing_date">Date</string>
    <string name="title_fishing_price">Price</string>
    <string name="title_fishing_bait">Bait</string>
    <string name="title_fishing_fish_feed">Fish feed</string>
    <string name="title_fishing_catch">Catch</string>
    <string name="title_fishing_tackle">Tackle</string>
    <string name="fishing_place">Place: <xliff:g id="place">%1$s</xliff:g></string>
    <string name="fishing_weather">Weather: <xliff:g id="weather">%1$s</xliff:g></string>
    <string name="fishing_description"><xliff:g id="description">%1$s</xliff:g></string>
    <string name="fishing_date">Date: <xliff:g id="date">%1$s</xliff:g></string>
    <string name="fishing_price">\nPrice: <xliff:g id="price">%1$s</xliff:g></string>
    <string name="hint_fishing_place">Place of fishing</string>
    <string name="price_value">0$</string>
    <string name="fishing_bait">\n\nBait: <xliff:g id="bait">%1$s</xliff:g></string>
    <string name="fishing_no_bait">There are no information about this bait</string>
    <string name="fishing_fish_feed">\nFish feed: <xliff:g id="fish_feed">%1$s</xliff:g></string>
    <string name="fishing_no_fish_feed">There are no information about this fish feed</string>
    <string name="fishing_catches">\nCatches: <xliff:g id="catch">%1$s</xliff:g></string>
    <string name="fishing_no_catches">There are no information about this catch</string>
    <string name="fishing_photo">Photo</string>
    <string name="image_descr">User photo</string>
    <string name="fishing_details">Details</string>
    <string name="footer_string">New Fishing</string>
    <string name="add_fishing">Add Fishing</string>
    <string name="share_search">Share my fishing to:</string>
    <string name="share_message">Fishing…</string>
    <string name="share_subject">Fishing app</string>
    <string name="settings_button">Settings</string>
    <string name="menu_detail_item">Edit</string>
    <string name="menu_detail_share">Share</string>
    <string name="menu_detail_delete">Delete</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g></string>
    <string name="title_weather_dialog">Set weather: </string>
    <string name="temperature">Current temperature: </string>
    <string name="temperature_value" translatable="false">0\u00B0</string>
    <string name="sync_account_type" translatable="false">fishing.validcat.net</string>
    <string name="content_authority" translatable="false">net.validcat.fishing.app</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Kharkiv</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_metric">Celsius</string>
    <string name="pref_units_label_imperial">Fahrenheit</string>
    <string name="format_temperature" translatable="false"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="pref_location_status_key" translatable="false">loc-status</string>
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)</string>
    <string name="pref_location_unknown_description">Validating Location… (<xliff:g id="location_setting">%1$s</xliff:g>)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="descr_weather_button">Change Weather</string>
    <string name="descr_tackle_button">Change Tackle</string>
    <string name="no_weather_data" translatable="false">0C</string>
    <string name="camera_permissoin_denied">Camera permission denied</string>
    <string name="pick_image">Load from the gallery</string>
    <string name="take_photo">Take a photo</string>
    <string name="title_photo_dialog">Photo</string>
    <string name="date_format">MMMM dd</string>
    <string name="key_photo_transition" translatable="false">photo_trans</string>
    <string name="key_weather_transition" translatable="false">weather_transition</string>
    <string name="key_place_transition" translatable="false">key_place_transition</string>
    <string name="key_description_transition" translatable="false">key_description_transition</string>
    <string name="key_date_transition" translatable="false">key_date_trans</string>
    <string name="fishing_no_description">There are no notes about this fishing</string>
    <string name="fishing_share_message">Fishing in <xliff:g id="place">%2$s</xliff:g> <xliff:g id="date">%1$s</xliff:g>:<xliff:g id="description">%3$s</xliff:g></string>
    <string name="title_phot_dialog">Pick photo</string>
    <string name="temp_formatted_cel" translatable="false"><xliff:g id="weatherTemp">%1$s</xliff:g>&#176;C</string>
    <string name="temp_formatted_far" translatable="false"><xliff:g id="weatherTemp">%1$s</xliff:g>&#176;F</string>
    <string name="tackle_value">Rod</string>
    <string name="title_tackle_dialog">Set tackles:</string>
    <string-array name="tackle_array">
        <item>@string/rod</item>
        <item>@string/spinning</item>
        <item>@string/feeder</item>
        <item>@string/distance_casting</item>
        <item>@string/ice_fishing_rod</item>
        <item>@string/tip_up</item>
        <item>@string/hand_line</item>
        <item>@string/fly_fishing</item>
    </string-array>
    <string name="rod">Rod </string>
    <string name="spinning">Spinning </string>
    <string name="feeder">Feeder </string>
    <string name="distance_casting">Distance casting </string>
    <string name="ice_fishing_rod">Ice fishing rod </string>
    <string name="tip_up">Tip up </string>
    <string name="hand_line">Hand line </string>
    <string name="fly_fishing">Fly fishing </string>
    <string name="alert_dialog_do_not_store">Reset and close</string>
    <string name="alert_dialog_stay_here">Stay here</string>
    <string name="close_without_save">Close without saving?</string>
    <string name="delete_fishing_item">Delete Fishing Item?</string>
    <string name="only_personal_fishing">You could delete only personal fishing!</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_place">You\'re here</string>
    <string name="map_drag">Drag and drop flag to change position.</string>
    <string name="storage_permissoin_denied">Storage permissoin denied</string>
    <string name="fish_place">Fishing place</string>
    <string name="fishing_counter">Fisgings</string>
    <string name="action_things">Things list</string>
    <string name="title_activity_things">Things list</string>
    <string name="thermal_bag">Thermal bag</string>
    <string name="lunch">Food for lunch</string>
    <string name="water">Drinking water</string>
    <string name="flashlight">Flashlight</string>
    <string name="folding_chair">Folding chair</string>
    <string name="sunglasses">Sunglasses</string>
    <string name="sun_umbrella">Sun umbrella</string>
    <string name="mosquito_repellent">Mosquito repellent</string>
    <string name="ok">Save</string>
    <string name="cancel">Cancel</string>
    <string name="item_description">Item description</string>
    <string name="open_things_list">Open things list</string>
    <string name="list_is_empty" translatable="false">Things list is empty.</string>
    <string name="action_remove_all">Remove all things</string>
    <string name="bag">Bag for fish</string>
    <string name="warm_clothes">Warm clothes</string>
    <string name="gloves">Gloves</string>
    <string name="axe">Ice axe</string>
    <string name="depthometer">Depthometer</string>
    <string name="wind_protection">Wind protection</string>
    <string name="title_friends_dialog" translatable="false">Contacts</string>
    <string name="send_email" translatable="false">Send invitations</string>
    <string name="signed_out">Signed Out</string>
    <string name="google_status_fmt" translatable="false">Google User: %s</string>
    <string name="google_title_text" translatable="false">Google Sign In</string>
    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>
    <string name="sign_out" translatable="false">Sign out</string>
    <string name="disconnect" translatable="false">Disconnect</string>
    <string name="default_web_client_id_fishing" translatable="false">289288756506-o4h6792nqvsd0aiho07n04hoka8keiss.apps.googleusercontent.com</string>
    <string name="drawer_open" translatable="false">open</string>
    <string name="drawer_close" translatable="false">close</string>
    <string name="keep_sync">Login to synchronize and store them on a server.</string>
    <string name="items_synced">Recordings are saved on the server and will always be available at registration</string>
    <string-array name="default_summer_things_list_array" translatable="false">
        <item>@string/spinning</item>
        <item>@string/thermal_bag</item>
        <item>@string/lunch</item>
        <item>@string/water</item>
        <item>@string/flashlight</item>
        <item>@string/folding_chair</item>
        <item>@string/sunglasses</item>
        <item>@string/sun_umbrella</item>
        <item>@string/mosquito_repellent</item>
    </string-array>
    <string-array name="default_winter_things_list_array" translatable="false">
        <item>@string/spinning</item>
        <item>@string/bag</item>
        <item>@string/gloves</item>
        <item>@string/warm_clothes</item>
        <item>@string/axe</item>
        <item>@string/depthometer</item>
        <item>@string/wind_protection</item>
        <item>@string/lunch</item>
        <item>@string/water</item>
        <item>@string/flashlight</item>
        <item>@string/folding_chair</item>
    </string-array>
    <string name="loading">Loading…</string>
    <string name="title_activity_fishing_list" translatable="false">FishingListActivity</string>
    <string name="recent">Recent</string>
    <string name="heading_my_fishing" translatable="false">My Fishing</string>
    <string name="heading_my_top_fishing" translatable="false">My Top Fishing</string>
    <string name="menu_logout">Log out</string>
</resources>