<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/detail_menu"
          android:icon="@drawable/ic_more_vert_24dp"
        android:title="@string/action_settings">
        <item
            android:id="@+id/share"
            android:title="@string/menu_detail_share"
            android:icon="@drawable/ic_share_24dp"
            app:showAsAction="never|withText">
        </item>

        <item
            android:id="@+id/edit"
            android:title="@string/menu_detail_item"
            android:icon="@drawable/ic_edit_24dp"
            app:showAsAction="never|withText">
        </item>
        <item
            android:id="@+id/delete"
            android:title="@string/menu_detail_delete"
            android:icon="@drawable/ic_delete_24dp"
            app:showAsAction="never|withText">
        </item>

    </item>
</menu>