<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp">

                <EditText
                    android:id="@+id/et_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fishing_place"
                    android:inputType="text"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_price"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/il_place"
                android:textSize="16sp">

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/title_fishing_price"
                    android:inputType="text"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ivWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/il_price"
                android:layout_marginLeft="32dp"
                android:layout_toRightOf="@+id/il_price"
                android:src="@drawable/ic_sunny" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/il_price"
                android:layout_marginTop="16dp"
                android:textSize="16sp">


                <EditText
                    android:id="@+id/et_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fishing_details"
                    android:inputType="text"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/il_price"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/ivWeather"
                android:text="@string/temperature_value"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_fishing_date"
                android:textSize="16sp"
                android:layout_alignBottom="@+id/ivWeather"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/il_details"
                android:contentDescription="@string/image_descr" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
